# swarmloka

./: .gitignore  README.md  pyproject.toml
examples/customer_service_loka/: customer_service_loka.py
swarmloka/: __init__.py
swarmloka/agent/: __init__.py  _types.py  loka.py  prompts.py
swarmloka/llm/: __init__.py  base.py  gemini.py  local.py  prompts.py
tests/: test_loka.py  test_loka_gemini.py
